# leopard

./: .gitignore  Cargo.toml  README.md  data.json  flake.nix  generate_data.py  generate_requests.py  node1_data.json  node3_data.json  run_custom_nodes.sh
config/: Cargo.toml
config/src/: lib.rs
config/src/node/: mod.rs
connection/: Cargo.toml
connection/src/: lib.rs
connection/src/node/: default.rs  id.rs  iroh.rs  mod.rs  port.rs
connection/src/request/handler/: default.rs  mod.rs
connection/src/route/: default.rs  mod.rs
dsl/: Cargo.toml
dsl/src/: lib.rs
dsl/src/internal/: checker.rs  mod.rs  node.rs  service.rs
errors/: Cargo.toml
errors/src/node/: mod.rs
membership/: Cargo.toml
membership/src/: lib.rs
membership/src/protocols/: Cargo.toml
membership/src/protocols/src/: lib.rs
message/: Cargo.toml
message/src/: lib.rs  macros.rs
message/src/deserializer/: mod.rs
metrics_output/: riblt_differences_resolved.csv  riblt_symbols_received.csv  riblt_symbols_sent.csv
metrics_output/network/analysis/: bloom_slices_by_trial.csv  bloom_slices_summary_by_similarity.csv  cpu_round_usage_by_trial.csv  cpu_summary_by_similarity.csv  cpu_usage_per_round.csv  duration_summary_by_similarity.csv  memory_round_usage_by_trial.csv  memory_summary_by_similarity.csv  phase_split_summary_by_similarity.csv  protocol_comparison_by_similarity.csv  protocol_cpu_comparison_by_similarity.csv  protocol_duration_comparison_by_similarity.csv  protocol_memory_comparison_by_similarity.csv  protocol_round_trip_comparison_by_similarity.csv  rbf_difference_reduction.csv  rbf_rsr_rbf_riblt_bytes.tex  riblt_duration_vs_difference.csv  riblt_scaling_rows.csv  round_duration_by_trial.csv  round_trip_samples_by_iteration.csv  round_trip_summary_by_similarity.csv  scom_size_by_trial.csv  scom_size_summary_by_similarity.csv  summary_by_similarity.csv  tab_rbf_phase_split.tex  tab_transmitted_bytes_by_similarity.tex  trial_transmitted_totals.csv
metrics_output/network/sweep_merkle_n100000_sim00_t1/: merkle_bytes_sent.csv  merkle_tree_data_request_received.csv  merkle_tree_sync_node_request_received.csv  merkle_tree_sync_root_received.csv  process_cpu_delta_seconds.csv  process_rss_memory_bytes.csv  protocol_round_trip_count.csv  reconciliation_completed.csv  reconciliation_round_duration_seconds.csv
metrics_output/network/sweep_merkle_n100000_sim00_t10/: merkle_bytes_sent.csv  merkle_tree_data_request_received.csv  merkle_tree_sync_node_request_received.csv  merkle_tree_sync_root_received.csv  process_cpu_delta_seconds.csv  process_rss_memory_bytes.csv  protocol_round_trip_count.csv  reconciliation_check_passed.csv  reconciliation_completed.csv  reconciliation_round_duration_seconds.csv
metrics_output/network/sweep_merkle_n100000_sim00_t11/: merkle_bytes_sent.csv  merkle_tree_data_request_received.csv  merkle_tree_sync_node_request_received.csv  merkle_tree_sync_root_received.csv  process_cpu_delta_seconds.csv  process_rss_memory_bytes.csv  protocol_round_trip_count.csv  reconciliation_completed.csv  reconciliation_correctness.csv  reconciliation_round_duration_seconds.csv
metrics_output/network/sweep_merkle_n100000_sim00_t12/: merkle_bytes_sent.csv  merkle_tree_data_request_received.csv  merkle_tree_sync_node_request_received.csv  merkle_tree_sync_root_received.csv  process_cpu_delta_seconds.csv  process_rss_memory_bytes.csv  protocol_round_trip_count.csv  reconciliation_check_passed.csv  reconciliation_completed.csv  reconciliation_round_duration_seconds.csv
metrics_output/network/sweep_merkle_n100000_sim00_t13/: merkle_bytes_sent.csv  merkle_tree_data_request_received.csv  (+8 more)
node/: Cargo.toml
node/src/: lib.rs
protocol/: Cargo.toml
protocol/src/: deserializer.rs  lib.rs
reconciliation/: Cargo.toml
reconciliation/src/: hybrid.rs  lib.rs  riblt.rs
reconciliation/src/algorithms/: mod.rs
reconciliation/src/algorithms/rbf/: angle_heuristic.rs  bayesian_cost.rs  bayesian_similarity.rs  expected_cost.rs  mod.rs  rateless_bloom.rs
reconciliation/src/algorithms/ribbon/: builder.rs  error.rs  filter.rs  hashing.rs  mod.rs  params.rs
reconciliation/src/checker/: mod.rs
reconciliation/src/merkle_tree/: deserializer.rs  messages.rs  mod.rs  protocol.rs  receiver.rs  tree.rs
reconciliation/src/rbf_riblt/: bloom.rs  deserializer.rs  messages.rs  mod.rs  protocols.rs  rateless_bloom.rs  receiver.rs  scom.rs
reconciliation/src/rf_riblt/: deserializer.rs  messages.rs  mod.rs  protocols.rs  receiver.rs
reconciliation/src/riblt/: deserializer.rs  messages.rs  mod.rs  protocols.rs  receiver.rs  session.rs  stream.rs
reconciliation/src/riblt_core/: mod.rs  session.rs  stream.rs  symbols.rs
replication/: Cargo.toml
replication/src/: deserializer.rs  lib.rs  messages.rs
replication/src/protocol/: mod.rs
riblt/: Cargo.toml
riblt/examples/: basic_usage.rs  decode_scaling.rs
riblt/src/: encoder.rs  lib.rs  mapping.rs  symbol.rs
runtime/: Cargo.toml
runtime/src/: lib.rs  macros.rs  runner.rs
scripts/: analyze_cpu_usage.py  analyze_phase_split.py  analyze_rbf_difference_reduction.py  analyze_riblt_scaling.py  analyze_roundtrip.py  analyze_similarity_bytes.py  analyze_similarity_duration.py  analyze_similarity_resources.py  analyze_similarity_scom.py  generate_data.py  generate_requests.py  make_comparison_rbf_rsr_rbf_riblt_phases.py  make_phase_split_table.py  merkle_mem_profile.sh  normalize_metrics_csv.py  plot_bytes_sent.py  plot_riblt_symbols_vs_similarity.py  riblt_decode_scaling.sh  run_experiment.sh  run_merkle_tree_small.sh  run_network_sweep.sh  run_requests.sh  run_riblt_size_sweep.sh  run_riblt_small.sh  run_similarity_sweep.sh
scripts/metrics_output/: merkle_tree_sync_root_received.csv
services/: Cargo.toml
services/src/: http.rs  lib.rs
src/: main.rs
src/experiments/: custom_nodes.rs  default_three_nodes.rs  merkle_mem_profile.rs  mod.rs
state/: Cargo.toml
state/src/: lib.rs
state/src/checker/: local.rs  mod.rs
state/src/node/: mod.rs
state/src/storage/: item.rs  mod.rs  state.rs
taints/: Cargo.toml
taints/src/: lib.rs
(+20708 files in other folders)
