[package]
name = "replication-engine"
version = "0.1.0"
edition = "2024"

[workspace]
members = [
  "config",
  "membership",
  "node",
  "protocol",
  "runtime",
  "reconciliation",
  "replication", 
  "state", 
  "services",
  "connection",
  "membership/src/protocols"
, "errors", "taints", "message", "services", "dsl"]

[dependencies]
tokio = { version = "1.48.0", features = ["full"] }
log = "0.4.29"
dashmap = "6.1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "2.0.18"

runtime = { path = "./runtime" }
node = { path = "./node" }
replication = { path = "./replication" }
state = { path = "./state" }
connection = { path = "./connection" }
membership-protocols = { path = "./membership/src/protocols" }
config = { path = "./config" }
reconciliation = { path = "./reconciliation" }
services = { path = "./services" }
metrics = "0.24.3"
clap = { version = "4.6.0", features = ["derive"] }
futures = "0.3"
