[package]
name = "replication-engine"
version = "0.1.0"
edition = "2024"
# Two [[bin]] targets exist (this crate + merkle_mem_profile), so `cargo run`
# needs to know the default. The profiler stays runnable via --bin.
default-run = "replication-engine"

# Standalone experiment binary; kept out of the default `src/main.rs` bin so its
# custom #[global_allocator] only applies to this profiler.
[[bin]]
name = "merkle_mem_profile"
path = "src/experiments/merkle_mem_profile.rs"

[lints]
workspace = true

[workspace.lints.clippy]
await_holding_lock = "deny"

[workspace]
members = [
  "config",
  "membership",
  "node",
  "protocol",
  "runtime",
  "reconciliation",
  "replication", 
  "state", 
  "services",
  "connection",
  "membership/src/protocols"
, "errors", "taints", "message", "services", "dsl"]

[dependencies]
tokio = { version = "1.48.0", features = ["full"] }
log = "0.4.29"
dashmap = "6.1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "2.0.18"

runtime = { path = "./runtime" }
node = { path = "./node" }
replication = { path = "./replication" }
state = { path = "./state" }
connection = { path = "./connection" }
membership-protocols = { path = "./membership/src/protocols" }
config = { path = "./config" }
reconciliation = { path = "./reconciliation" }
services = { path = "./services" }
dsl = { path = "./dsl" }
metrics = "0.24.3"
clap = { version = "4.6.0", features = ["derive"] }
futures = "0.3"
