[package]
name = "connection"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.83"
iroh = "0.95.1"
runtime = { path = "../runtime" }
message = { path = "../message" }
tokio = { version = "1.28.2" }
dashmap = "5.5.3"
zeromq = "0.5.0"
serde = "1.0.228"
rkyv = "0.8.15"
typetag = "0.2.21"
rkyv_dyn = "0.7.46"
rancor = "0.1.1"
