[package]
name = "dsl"
version = "0.1.0"
edition = "2024"

[dependencies]
connection = { path = "../connection" }
runtime = { path = "../runtime" }
state = { path = "../state" }
config = { path = "../config" }
node = { path = "../node" }
reconciliation = { path = "../reconciliation" }
membership-protocols = { path = "../membership/src/protocols" }
services = { path = "../services" }

tracing = "0.1"
futures = "0.3"
