[package]
name = "protocol"
version = "0.1.0"
edition = "2024"

[dependencies]
connection = { path = "../connection" }
state = { path = "../state" }
membership = { path = "../membership" }
runtime = { path = "../runtime" }
message = { path = "../message" }
async-trait = "0.1.83"
uuid = { version = "1.21.0", features = ["v4"] }
rand = "0.10.0"
