[package]
name = "reconciliation"
version = "0.1.0"
edition = "2021"

[dependencies]
protocol = { path = "../protocol" }
state = { path = "../state" }
message = { path = "../message" }
connection = { path = "../connection" }
membership = { path = "../membership" }
runtime = { path = "../runtime" }
riblt = "0.1.1"
async-trait = "0.1.89"
tokio = "1.50.0"
