[package]
name = "reconciliation"
version = "0.1.0"
edition = "2021"

[dependencies]
protocol = { path = "../protocol" }
state = { path = "../state" }
message = { path = "../message" }
connection = { path = "../connection" }
membership = { path = "../membership" }
runtime = { path = "../runtime" }
riblt = "0.1.1"
async-trait = "0.1.89"
tokio = "1.50.0"
tracing = "0.1.44"
statig = "0.4.1"
rkyv = "0.8.15"
