[package]
name = "reconciliation"
version = "0.1.0"
edition = "2021"

[dependencies]
protocol = { path = "../protocol" }
state = { path = "../state" }
message = { path = "../message" }
connection = { path = "../connection" }
membership = { path = "../membership" }
runtime = { path = "../runtime" }
riblt = { path = "../riblt" }
async-trait = "0.1.89"
tokio = "1.50.0"
tracing = "0.1.44"
statig = "0.4.1"
rkyv = "0.8.15"
dashmap = "6.1.0"
blake3 = "1.8.4"
bincode = "1.3.3"
serde = { version = "1.0.228", features = ["derive"] }
rand = "0.10.0"
metrics = "0.24.3"
uuid = { version = "1.23.0", features = ["v4"] }
bitvec = "1.0.1"

[lints]
workspace = true
