[package]
name = "replication"
version = "0.1.0"
edition = "2024"

[dependencies]
protocol = { path = "../protocol" }
connection = { path = "../connection" }
state = { path = "../state" }
membership = { path = "../membership" }
runtime = { path = "../runtime" }
message = { path = "../message" }

log = "0.4.29"
tracing = "0.1"
async-trait = "0.1.83"
