[package]
name = "state"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.83"
dashmap = "6.1.0"
connection = { path = "../connection" }
membership = { path = "../membership" }
config = { path = "../config" }
runtime = { path = "../runtime" }
errors = { path = "../errors" }
taints = { path = "../taints" }
