[package]
name = "state"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.83"
dashmap = { version = "6.1.0", features = ["serde"] }
connection = { path = "../connection" }
membership = { path = "../membership" }
message = { path = "../message" }
config = { path = "../config" }
runtime = { path = "../runtime" }
errors = { path = "../errors" }
taints = { path = "../taints" }
tokio = "1.50.0"
tracing = "0.1.44"
serde = "1.0.228"
serde_json = "1.0.149"
metrics = "0.24.3"
