[package]
name = "membership-protocols"
version = "0.1.0"
edition = "2024"

[dependencies]
protocol = { path = "../../../protocol" }
state = { path = "../../../state" }
connection = { path = "../../../connection" }
membership = { path = "../../../membership" }
runtime = { path = "../../../runtime" }
message = { path = "../../../message" }

async-trait = "0.1.83"
